# Mirage

./: .clangd  CMakeLists.txt  build.bat
.cache/clangd/index/: camera.c.6C33C3242AB93F50.idx  camera.h.F1430F068012D825.idx  character.c.2207E645C6C0E500.idx  character.c.4E1F7020A84859A3.idx  character.c.4F56DEB3F3DAFEF8.idx  character.h.118EE8330DE2C138.idx  character.h.3746911E3C4A1BEC.idx  character.h.5FED0BA6B5CDBB6B.idx  character.h.A7F38189163204F4.idx  debug.c.5128BD5A2F7045F9.idx  debug.c.712F5F825B485290.idx  debug.h.516289A86FCCDD4A.idx  debug.h.85AB28FF4F1E12B5.idx  elements.c.9CAC44F44B9249AD.idx  elements.c.E8216B6FBE93C306.idx  elements.h.5256D1D793691680.idx  elements.h.60EC1DF1D74725CD.idx  floor.c.248A2B1F27160C4A.idx  floor.c.5127A2A820384808.idx  floor.c.CECCB7872DCD1DA3.idx  floor.h.233690BBD20D5CBF.idx  floor.h.5365442926A3D1F7.idx  floor.h.92172E4C919B88DC.idx  global.h.0EFCAEF5894E1499.idx  global.h.5A3F19BEC11D588E.idx  global.h.C25EF09E88EC583D.idx  global.h.E68C2CCD0580A361.idx  main.c.064358C2B8598C02.idx  main.c.3EDD261B086A3522.idx  main.c.8F716F55E62E1038.idx  map.c.2B468F9ECEEF0215.idx  map.c.450D42D8841366A6.idx  map.c.D41DB25D9E72542A.idx  map.h.39EA06E82401A783.idx  map.h.CDEA0CDF9C07A6E5.idx  map.h.D5F5AA600FDADC8F.idx  map_noise.c.99773A3E6704B062.idx  map_noise.h.7D33CAC9F4A118E0.idx  structure.h.A171CC9EEC15DE8D.idx  ui.c.448D1533553AC212.idx  (+5 more)
src/: main.c
src/functions/character/: character.c  character.h
src/functions/debug/: debug.c  debug.h
src/functions/elements/: elements.c  elements.h
src/include/: global.h  structure.h
(+8 files in other folders)
